@@ -8,6 +8,7 @@ version 0.11.0-pre8 (03/23/2001):
 	* Can use Alt to access menu, and Ctl-char for certain actions
 	  (thanks baldnik)
 	* Oscar blocking works (?)
+	* MSN can see status of other users
 
 version 0.11.0-pre7 (03/16/2001):
 	* Can build RPMs as non-root
